examples/test/testpolicy17427.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17427
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key18: value46
      key12: value48
      key33: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value15
          key37: value40
      podSelector:
        matchLabels:
          key29: value3
